# eurobot-2024-onboard-cam

./: README.md
.github/workflows/: build-inspection-ws.yml
inspection/diff-rs-pcl2/include/: dbscan-cluster.h
inspection/diff-rs-pcl2/launch/: main-a.launch  main-b.launch
inspection/diff-rs-pcl2/src/: dbscan-cluster.cpp  entrypoint.cpp  main-a.cpp  safety-ab.cpp
inspection/docker/: Dockerfile  compose-build.yml  compose-diff-build.yml  compose-diff-run.yml  compose-run-diff.yml  compose-run-univ.yml  compose-univ-run.yaml  docker-compose.yaml  docker-diff.sh  docker-univ.sh  docker.sh  entrypoint.sh
inspection/docker-windows-rviz/: Dockerfile  docker-compose.yaml  ws-build.sh
inspection/docker/script/: ws-build.sh
inspection/extraction-ws/devel/: _setup_util.py
inspection/extraction-ws/devel/lib/diff-rs-pcl2/: D-entrypoint  D-main-a  D-main-b  D-safety-a  D-safety-ab  D-safety-b
inspection/extraction-ws/devel/lib/univ-rs-pcl2/: U-entrypoint  U-main-a  U-main-b  U-safety-ab
inspection/extraction-ws/devel/share/diff-rs-pcl2/cmake/: diff-rs-pcl2Config.cmake
inspection/extraction-ws/devel/share/univ-rs-pcl2/cmake/: univ-rs-pcl2Config.cmake
inspection/extraction-ws/src/diff-rs-pcl2/: CMakeLists.txt
inspection/extraction-ws/src/diff-rs-pcl2/include/: dbscan-cluster.h
inspection/extraction-ws/src/diff-rs-pcl2/launch/: diff-prepare.launch  main-a.launch  main-b.launch  safety-a.launch  safety-b.launch
inspection/extraction-ws/src/diff-rs-pcl2/src/: dbscan-cluster.cpp  entrypoint.cpp  ins-ready.py  main-a.cpp  main-b.cpp  safety-a.cpp  safety-ab.cpp  safety-b.cpp  voxelgrid-cube.cpp
inspection/extraction-ws/src/univ-rs-pcl2/: CMakeLists.txt
inspection/extraction-ws/src/univ-rs-pcl2/config/: cam-b.rviz  marker-cam-a.rviz  marker-cam-b.rviz
inspection/extraction-ws/src/univ-rs-pcl2/include/: dbscan-cluster.h  voxelgrid-cube.h
inspection/extraction-ws/src/univ-rs-pcl2/launch/: main-a.launch  main-b.launch  rviz-a.launch  rviz-b.launch  rviz-marker-a.launch  rviz-marker-b.launch  safety-ab.launch
inspection/extraction-ws/src/univ-rs-pcl2/src/: dbscan-cluster.cpp  entrypoint.cpp  main-a.cpp  main-b.cpp  safety-ab.cpp  voxelgrid-cube.cpp
inspection/pcl/: CMakeLists.txt  package.xml
inspection/pcl/config/: voxelGrid.rviz
inspection/pcl/launch/: voxelGrid-filtering.launch
inspection/pcl/src/: example.cpp
inspection/realsense-ws/devel/include/aruco_ros/: ArucoThresholdConfig.h
inspection/realsense-ws/devel/include/image_proc/: CropDecimateConfig.h  DebayerConfig.h  RectifyConfig.h  ResizeConfig.h
inspection/realsense-ws/devel/include/image_view/: ImageViewConfig.h
inspection/realsense-ws/devel/include/stereo_image_proc/: DisparityConfig.h
inspection/realsense-ws/devel/lib/aruco_ros/: double  marker_publisher  single
inspection/realsense-ws/devel/lib/camera_calibration/: cameracheck.py  tarfile_calibration.py
inspection/realsense-ws/devel/lib/image_proc/: image_proc
inspection/realsense-ws/devel/lib/image_publisher/: image_publisher
inspection/realsense-ws/devel/lib/image_rotate/: image_rotate
inspection/realsense-ws/devel/lib/image_view/: disparity_view  extract_images  image_saver  stereo_view  video_recorder
inspection/realsense-ws/devel/lib/pkgconfig/: aruco.pc  aruco_msgs.pc  aruco_ros.pc  camera_calibration.pc  depth_image_proc.pc  image_proc.pc  image_publisher.pc  image_rotate.pc  image_view.pc  stereo_image_proc.pc  usb_cam.pc
inspection/realsense-ws/devel/lib/stereo_image_proc/: stereo_image_proc
inspection/realsense-ws/devel/lib/usb_cam/: usb_cam_node
inspection/realsense-ws/devel/share/aruco/cmake/: arucoConfig.cmake
inspection/realsense-ws/devel/share/aruco_msgs/cmake/: aruco_msgs-msg-extras.cmake  aruco_msgs-msg-paths.cmake  aruco_msgsConfig.cmake
inspection/realsense-ws/devel/share/usb_cam/cmake/: usb_camConfig.cmake
inspection/rs-pcl2/: CMakeLists.txt  package.xml
inspection/rs-pcl2/config/: differential.rviz
inspection/rs-pcl2/include/: diff-cube.h  diff-dbscan.h
inspection/rs-pcl2/launch/: diff.launch  differential.launch  rviz.launch
inspection/rs-pcl2/src/: diff-cube.cpp  diff-dbscan.cpp  diff.cpp  differential.cpp  main.cpp
inspection/rs-pcl2/src/diff/: dbscan-cluster.cpp
inspection/rs-pcl2/src/main/: entrypoint.cpp  ins-ready.py
inspection/startup/: clean-node.sh  diff-inspection.sh  diff-ladybug.sh  prepare.sh  realsense-cam-1.sh  realsense-cam-2.sh
inspection/startup/diff/: diff-inspection-a.sh  diff-inspection-ab.sh  diff-inspection-b.sh  diff-inspection.sh  diff-prepare.sh
inspection/startup/diff/task/: diff-cam-a.sh  diff-cam-b.sh  diff-ladybug-a.sh  diff-ladybug-b.sh  diff-safety-a.sh  diff-safety-b.sh
inspection/startup/subtask/: diff-cam-a.sh  diff-cam-b.sh
inspection/startup/subtesk/: diff-cam-a.sh  diff-cam-b.sh  diff-ladybug.sh
inspection/startup/task/: diff-inspection.sh
inspection/startup/univ/: univ-inspection.sh  univ-prepare.sh
inspection/startup/univ/task/: univ-cam-a-rviz.sh  univ-cam-a.sh  univ-cam-b-rviz.sh  univ-cam-b.sh  univ-ladybug-a.sh  univ-ladybug-b.sh  univ-safety-ab.sh
inspection/univ-rs-pcl2/: CMakeLists.txt
inspection/univ-rs-pcl2/config/: cam-a.rviz
inspection/univ-rs-pcl2/include/: dbscan-cluster.h
inspection/univ-rs-pcl2/launch/: main-a.launch  main-b.launch
inspection/univ-rs-pcl2/src/: dbscan-cluster.cpp  main-b.cpp  safety-ab.cpp
onboard_envs/: docker-compose.yml  test.sh
onboard_ws/devel/: .catkin  .rosinstall  setup.sh
onboard_ws/devel/include/yolo/: ready.h  readyRequest.h  readyResponse.h  signal.h  signalRequest.h  signalResponse.h  yolomsg.h
onboard_ws/devel/lib/pkgconfig/: yolo.pc
onboard_ws/devel/share/yolo/cmake/: yolo-msg-extras.cmake  yolo-msg-paths.cmake  yoloConfig.cmake
onboard_ws/src/yolo/: CMakeLists.txt  package.xml
onboard_ws/src/yolo/scripts/: multinewnew_v8.py  new_ultra.py  new_v8.py  test.py  yolo_pub.py
onboard_ws/src/yolo/srv/: signal.srv
ondoard_envs/: docker-compose.yml  gary.sh  test.sh
(+45 files in other folders)
